Update evaluation scripts
Complete writing evaluation scripts to generate necessary data and store them to disk

--- a/NLP/dev-workspace/sa/bert_2023-12-13/evaluation_script.ipynb
+++ b/NLP/dev-workspace/sa/bert_2023-12-13/evaluation_script.ipynb
@@ -42,7 +42,10 @@
     "import str_cleaning_functions\n",
     "import dataset_loader\n",
     "\n",
-    "import evaluation_functions"
+    "import evaluation_functions\n",
+    "\n",
+    "\n",
+    "SAVE_EVAL_RESULTS = True"
    ]
   },
   {
@@ -94,11 +97,29 @@
     ")\n",
     "\n",
     "training_args_datetime = datetime(year=2023, month=12, day=17)\n",
-    "training_storing_folder = Path(training_name).resolve()\n",
+    "training_storing_folder = Path(training_name).resolve()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# load validation dataset. Same for all models\n",
     "\n",
-    "dataset_traintest, X_imbal_valid, y_imbal_valid, X_bal_valid, y_bal_valid = dataset_loader.load_presampled_dataset(DATASET_SIZE, DATASET_IS_BALANCED)\n",
+    "X_imbal_valid, y_imbal_valid, X_bal_valid, y_bal_valid = dataset_loader.load_validation_dataset()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# rerun this cell if want to evaluate a new model\n",
     "\n",
-    "X_train, X_test, y_train, y_test = dataset_loader.create_traintest_dataset(dataset_traintest)"
+    "X_train, X_test, y_train, y_test = dataset_loader.load_presampled_traintest_dataset(DATASET_SIZE, DATASET_IS_BALANCED)"
    ]
   },
   {
@@ -122,9 +143,18 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "X_train = cleaning_arr(X_train)\n",
-    "X_test = cleaning_arr(X_test)\n",
+    "# rerun this cell if want to evaluate a new model\n",
     "\n",
+    "X_train = cleaning_arr(X_train)\n",
+    "X_test = cleaning_arr(X_test)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "X_imbal_valid = cleaning_arr(X_imbal_valid)\n",
     "X_bal_valid = cleaning_arr(X_bal_valid)"
    ]
@@ -386,6 +416,37 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# create folders for storing evaluation metrics\n",
+    "\n",
+    "eval_metrics_folder = Path.joinpath(training_storing_folder, 'eval_metrics')\n",
+    "\n",
+    "if not eval_metrics_folder.exists():\n",
+    "    eval_metrics_folder.mkdir()\n",
+    "\n",
+    "eval_test_prefix = 'test'\n",
+    "eval_valid_bal_prefix = 'valid_bal'\n",
+    "eval_valid_imbal_prefix = 'valid_imbal'\n",
+    "\n",
+    "eval_test_folder = Path.joinpath(eval_metrics_folder, eval_test_prefix)\n",
+    "eval_valid_bal_folder = Path.joinpath(eval_metrics_folder, eval_valid_bal_prefix)\n",
+    "eval_valid_imbal_folder = Path.joinpath(eval_metrics_folder, eval_valid_imbal_prefix)\n",
+    "\n",
+    "if not eval_test_folder.exists():\n",
+    "    eval_test_folder.mkdir()\n",
+    "\n",
+    "if not eval_valid_bal_folder.exists():\n",
+    "    eval_valid_bal_folder.mkdir()\n",
+    "\n",
+    "if not eval_valid_imbal_folder.exists():\n",
+    "    eval_valid_imbal_folder.mkdir()"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 13,
    "metadata": {},
    "outputs": [
@@ -479,7 +540,16 @@
     }
    ],
    "source": [
-    "evaluation_functions.print_classification_report(y_test, y_test_pred)"
+    "test_classification_report_dict = evaluation_functions.print_classification_report(y_test, y_test_pred)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "test_classification_report_dict"
    ]
   },
   {
@@ -506,7 +576,8 @@
     "    y_test,\n",
     "    y_test_pred,\n",
     "    f'Confusion matrix {DATASET_SIZE}K-{\"bal\" if DATASET_IS_BALANCED else \"imbal\"}-training-data test-set',\n",
-    "    save=False\n",
+    "    save=SAVE_EVAL_RESULTS,\n",
+    "    save_filename=Path.joinpath(eval_test_folder, f'confusion_matrix_test.png')\n",
     ")"
    ]
   },
@@ -538,8 +609,35 @@
     "    y_test,\n",
     "    y_test_pred_prob,\n",
     "    f'ROC curve {DATASET_SIZE}K-{\"bal\" if DATASET_IS_BALANCED else \"imbal\"}-training-data test-set',\n",
-    "    save=False\n",
+    "    save=SAVE_EVAL_RESULTS,\n",
+    "    save_filename=Path.joinpath(eval_test_folder, f'roc_curve_test.png')\n",
     ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.metrics import roc_auc_score\n",
+    "\n",
+    "# import importlib\n",
+    "# importlib.reload(evaluation_functions)\n",
+    "\n",
+    "# add ROC area to report_dict\n",
+    "test_classification_report_dict['roc_auc'] = roc_auc_score(y_test, y_test_pred_prob)\n",
+    "\n",
+    "test_report_df = evaluation_functions.create_classification_report_df(\n",
+    "    test_classification_report_dict, \n",
+    "    training_name)\n",
+    "\n",
+    "# save the dataframe\n",
+    "if SAVE_EVAL_RESULTS:\n",
+    "    test_report_df.to_csv(Path.joinpath(eval_test_folder, \"{}_{}_test_report.csv\".format(\n",
+    "        training_name,\n",
+    "        training_args_datetime.strftime(\"%Y-%m-%d\")\n",
+    "    )))"
    ]
   },
   {
@@ -618,7 +716,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "evaluation_functions.print_classification_report(y_bal_valid, y_bal_valid_pred)"
+    "bal_valid_classification_result_dict = evaluation_functions.print_classification_report(y_bal_valid, y_bal_valid_pred)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "bal_valid_classification_result_dict"
    ]
   },
   {
@@ -630,7 +737,9 @@
     "evaluation_functions.create_confusion_matrix_graph(\n",
     "    y_bal_valid, y_bal_valid_pred, \n",
     "    f'Confusion matrix {DATASET_SIZE}K-{\"bal\" if DATASET_IS_BALANCED else \"imbal\"}-training-data bal-valid-set',\n",
-    "    save=False)"
+    "    save=SAVE_EVAL_RESULTS,\n",
+    "    save_filename=Path.joinpath(eval_valid_bal_folder, f'confusion_matrix_valid_bal.png')\n",
+    ")"
    ]
   },
   {
@@ -642,7 +751,28 @@
     "evaluation_functions.plot_roc_curve_binary(\n",
     "    y_bal_valid, y_bal_valid_pred_prob, \n",
     "    title=f'ROC curve {DATASET_SIZE}K-{\"bal\" if DATASET_IS_BALANCED else \"imbal\"}-training-data bal-valid-set', \n",
-    "    save=False)"
+    "    save=SAVE_EVAL_RESULTS,\n",
+    "    save_filename=Path.joinpath(eval_valid_bal_folder, f'roc_curve_valid_bal.png')\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# add ROC area to report_dict\n",
+    "bal_valid_classification_result_dict['roc_auc'] = roc_auc_score(y_bal_valid, y_bal_valid_pred_prob)\n",
+    "\n",
+    "bal_valid_report_df = evaluation_functions.create_classification_report_df(bal_valid_classification_result_dict, training_name)\n",
+    "\n",
+    "# save the dataframe\n",
+    "if SAVE_EVAL_RESULTS:\n",
+    "    bal_valid_report_df.to_csv(Path.joinpath(eval_valid_bal_folder, \"{}_{}_valid_bal_report.csv\".format(\n",
+    "        training_name,\n",
+    "        training_args_datetime.strftime(\"%Y-%m-%d\")\n",
+    "    )))"
    ]
   },
   {
@@ -777,7 +907,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "evaluation_functions.print_classification_report(y_imbal_valid, y_imbal_valid_pred)"
+    "imbal_valid_classification_result_dict = evaluation_functions.print_classification_report(y_imbal_valid, y_imbal_valid_pred)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "imbal_valid_classification_result_dict"
    ]
   },
   {
@@ -789,7 +928,9 @@
     "evaluation_functions.create_confusion_matrix_graph(\n",
     "    y_imbal_valid, y_imbal_valid_pred, \n",
     "    title=f'Confusion matrix {DATASET_SIZE}K-{\"bal\" if DATASET_IS_BALANCED else \"imbal\"}-training-data imbal-valid-set',\n",
-    "    save=False)"
+    "    save=SAVE_EVAL_RESULTS,\n",
+    "    save_filename=Path.joinpath(eval_valid_imbal_folder, f'confusion_matrix_valid_imbal.png')\n",
+    ")"
    ]
   },
   {
@@ -800,8 +941,10 @@
    "source": [
     "evaluation_functions.plot_roc_curve_binary(\n",
     "    y_imbal_valid, y_imbal_valid_pred_prob, \n",
-    "    title=f'ROC curve {DATASET_SIZE}K-{\"bal\" if DATASET_IS_BALANCED else \"imbal\"}training-data imbal-valid-set',\n",
-    "    save=False)"
+    "    title=f'ROC curve {DATASET_SIZE}K-{\"bal\" if DATASET_IS_BALANCED else \"imbal\"}-training-data imbal-valid-set',\n",
+    "    save=SAVE_EVAL_RESULTS,\n",
+    "    save_filename=Path.joinpath(eval_valid_imbal_folder, f'roc_curve_valid_imbal.png')\n",
+    ")"
    ]
   },
   {
