--- a/NLP/dev-workspace/sa/glove-cnn_2023-12-12/evaluation_script.ipynb
+++ b/NLP/dev-workspace/sa/glove-cnn_2023-12-12/evaluation_script.ipynb
@@ -42,7 +42,10 @@
     "import str_cleaning_functions\n",
     "import dataset_loader\n",
     "\n",
-    "import evaluation_functions"
+    "import evaluation_functions\n",
+    "\n",
+    "\n",
+    "SAVE_EVAL_RESULTS = True"
    ]
   },
   {
@@ -98,11 +101,29 @@
     ")\n",
     "\n",
     "training_args_datetime = datetime(year=2023, month=12, day=18)\n",
-    "training_storing_folder = Path(training_name).resolve()\n",
+    "training_storing_folder = Path(training_name).resolve()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# load validation dataset. Same for all models\n",
     "\n",
-    "dataset_traintest, X_imbal_valid, y_imbal_valid, X_bal_valid, y_bal_valid = dataset_loader.load_presampled_dataset(DATASET_SIZE, DATASET_IS_BALANCED)\n",
+    "X_imbal_valid, y_imbal_valid, X_bal_valid, y_bal_valid = dataset_loader.load_validation_dataset()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# rerun this cell if want to evaluate a new model\n",
     "\n",
-    "X_train, X_test, y_train, y_test = dataset_loader.create_traintest_dataset(dataset_traintest)"
+    "X_train, X_test, y_train, y_test = dataset_loader.load_presampled_traintest_dataset(DATASET_SIZE, DATASET_IS_BALANCED)"
    ]
   },
   {
@@ -135,16 +156,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# applying data cleaning to all datasets\n",
-    "X_imbal_valid = cleaning_arr(X_imbal_valid)\n",
-    "X_bal_valid = cleaning_arr(X_bal_valid)\n",
-    "\n",
-    "# X_bal_valid = X_bal_valid.to_numpy()\n",
-    "# y_bal_valid = y_bal_valid.to_numpy()\n",
-    "\n",
-    "# X_imbal_valid = X_imbal_valid.to_numpy()\n",
-    "# y_imbal_valid = y_imbal_valid.to_numpy()\n",
-    "\n",
+    "# rerun this cell if want to evaluate a new model\n",
     "\n",
     "X_train = cleaning_arr(X_train)\n",
     "X_test = cleaning_arr(X_test)\n",
@@ -153,6 +165,23 @@
     "# X_test = X_test.to_numpy()\n",
     "# y_train = y_train.to_numpy()\n",
     "# y_test = y_test.to_numpy()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# applying data cleaning to all datasets\n",
+    "X_imbal_valid = cleaning_arr(X_imbal_valid)\n",
+    "X_bal_valid = cleaning_arr(X_bal_valid)\n",
+    "\n",
+    "# X_bal_valid = X_bal_valid.to_numpy()\n",
+    "# y_bal_valid = y_bal_valid.to_numpy()\n",
+    "\n",
+    "# X_imbal_valid = X_imbal_valid.to_numpy()\n",
+    "# y_imbal_valid = y_imbal_valid.to_numpy()"
    ]
   },
   {
@@ -293,6 +322,7 @@
     "))\n",
     "model = keras.models.load_model(model_path)\n",
     "\n",
+    "print('\\n\\n')\n",
     "print('Loaded text vectorizer from {}'.format(text_vectorizer_path))\n",
     "print('Loaded model from {}'.format(model_path))"
    ]
@@ -528,7 +558,16 @@
     }
    ],
    "source": [
-    "evaluation_functions.print_classification_report(y_test, y_test_pred)"
+    "test_classification_report_dict = evaluation_functions.print_classification_report(y_test, y_test_pred)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "test_classification_report_dict"
    ]
   },
   {
@@ -554,9 +593,9 @@
     "evaluation_functions.create_confusion_matrix_graph(\n",
     "    y_test,\n",
     "    y_test_pred,\n",
-    "    f'Confusion matrix {DATASET_SIZE}K-{\"bal\" if DATASET_IS_BALANCED else \"imbal\"}-train test-set',\n",
-    "    save=False,\n",
-    "    save_filename=Path.joinpath(eval_test_folder, 'confusion_matrix_test.png')\n",
+    "    f'Confusion matrix {DATASET_SIZE}K-{\"bal\" if DATASET_IS_BALANCED else \"imbal\"}-training-data test-set',\n",
+    "    save=SAVE_EVAL_RESULTS,\n",
+    "    save_filename=Path.joinpath(eval_test_folder, f'confusion_matrix_test.png')\n",
     ")"
    ]
   },
@@ -588,8 +627,35 @@
     "    y_test,\n",
     "    y_test_pred_prob,\n",
     "    f'ROC curve {DATASET_SIZE}K-{\"bal\" if DATASET_IS_BALANCED else \"imbal\"}-training-data test-set',\n",
-    "    save=False\n",
+    "    save=SAVE_EVAL_RESULTS,\n",
+    "    save_filename=Path.joinpath(eval_test_folder, f'roc_curve_test.png')\n",
     ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.metrics import roc_auc_score\n",
+    "\n",
+    "# import importlib\n",
+    "# importlib.reload(evaluation_functions)\n",
+    "\n",
+    "# add ROC area to report_dict\n",
+    "test_classification_report_dict['roc_auc'] = roc_auc_score(y_test, y_test_pred_prob)\n",
+    "\n",
+    "test_report_df = evaluation_functions.create_classification_report_df(\n",
+    "    test_classification_report_dict, \n",
+    "    training_name)\n",
+    "\n",
+    "# save the dataframe\n",
+    "if SAVE_EVAL_RESULTS:\n",
+    "    test_report_df.to_csv(Path.joinpath(eval_test_folder, \"{}_{}_test_report.csv\".format(\n",
+    "        training_name,\n",
+    "        training_args_datetime.strftime(\"%Y-%m-%d\")\n",
+    "    )))"
    ]
   },
   {
@@ -654,7 +720,16 @@
     }
    ],
    "source": [
-    "evaluation_functions.print_classification_report(y_bal_valid, y_bal_valid_pred)"
+    "bal_valid_classification_result_dict = evaluation_functions.print_classification_report(y_bal_valid, y_bal_valid_pred)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "bal_valid_classification_result_dict"
    ]
   },
   {
@@ -677,7 +752,9 @@
     "evaluation_functions.create_confusion_matrix_graph(\n",
     "    y_bal_valid, y_bal_valid_pred, \n",
     "    f'Confusion matrix {DATASET_SIZE}K-{\"bal\" if DATASET_IS_BALANCED else \"imbal\"}-training-data bal-valid-set',\n",
-    "    save=False)"
+    "    save=SAVE_EVAL_RESULTS,\n",
+    "    save_filename=Path.joinpath(eval_valid_bal_folder, f'confusion_matrix_valid_bal.png')\n",
+    ")"
    ]
   },
   {
@@ -707,7 +784,28 @@
     "evaluation_functions.plot_roc_curve_binary(\n",
     "    y_bal_valid, y_bal_valid_pred_prob, \n",
     "    title=f'ROC curve {DATASET_SIZE}K-{\"bal\" if DATASET_IS_BALANCED else \"imbal\"}-training-data bal-valid-set', \n",
-    "    save=False)"
+    "    save=SAVE_EVAL_RESULTS,\n",
+    "    save_filename=Path.joinpath(eval_valid_bal_folder, f'roc_curve_valid_bal.png')\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# add ROC area to report_dict\n",
+    "bal_valid_classification_result_dict['roc_auc'] = roc_auc_score(y_bal_valid, y_bal_valid_pred_prob)\n",
+    "\n",
+    "bal_valid_report_df = evaluation_functions.create_classification_report_df(bal_valid_classification_result_dict, training_name)\n",
+    "\n",
+    "# save the dataframe\n",
+    "if SAVE_EVAL_RESULTS:\n",
+    "    bal_valid_report_df.to_csv(Path.joinpath(eval_valid_bal_folder, \"{}_{}_valid_bal_report.csv\".format(\n",
+    "        training_name,\n",
+    "        training_args_datetime.strftime(\"%Y-%m-%d\")\n",
+    "    )))"
    ]
   },
   {
@@ -772,7 +870,16 @@
     }
    ],
    "source": [
-    "evaluation_functions.print_classification_report(y_imbal_valid, y_imbal_valid_pred)"
+    "imbal_valid_classification_result_dict = evaluation_functions.print_classification_report(y_imbal_valid, y_imbal_valid_pred)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "imbal_valid_classification_result_dict"
    ]
   },
   {
@@ -794,8 +901,10 @@
    "source": [
     "evaluation_functions.create_confusion_matrix_graph(\n",
     "    y_imbal_valid, y_imbal_valid_pred, \n",
-    "    title=f'Confusion matrix {DATASET_SIZE}K-{\"bal\" if DATASET_IS_BALANCED else \"ßimbal\"}-training-data imbal-valid-set',\n",
-    "    save=False)"
+    "    title=f'Confusion matrix {DATASET_SIZE}K-{\"bal\" if DATASET_IS_BALANCED else \"imbal\"}-training-data imbal-valid-set',\n",
+    "    save=SAVE_EVAL_RESULTS,\n",
+    "    save_filename=Path.joinpath(eval_valid_imbal_folder, f'confusion_matrix_valid_imbal.png')\n",
+    ")"
    ]
   },
   {
@@ -824,8 +933,29 @@
    "source": [
     "evaluation_functions.plot_roc_curve_binary(\n",
     "    y_imbal_valid, y_imbal_valid_pred_prob, \n",
-    "    title=f'ROC curve {DATASET_SIZE}K-{\"bal\" if DATASET_IS_BALANCED else \"imbal\"}training-data imbal-valid-set',\n",
-    "    save=False)"
+    "    title=f'ROC curve {DATASET_SIZE}K-{\"bal\" if DATASET_IS_BALANCED else \"imbal\"}-training-data imbal-valid-set',\n",
+    "    save=SAVE_EVAL_RESULTS,\n",
+    "    save_filename=Path.joinpath(eval_valid_imbal_folder, f'roc_curve_valid_imbal.png')\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# add ROC area to report_dict\n",
+    "imbal_valid_classification_result_dict['roc_auc'] = roc_auc_score(y_imbal_valid, y_imbal_valid_pred_prob)\n",
+    "\n",
+    "imbal_valid_report_df = evaluation_functions.create_classification_report_df(imbal_valid_classification_result_dict, training_name)\n",
+    "\n",
+    "# save the dataframe\n",
+    "if SAVE_EVAL_RESULTS:\n",
+    "    imbal_valid_report_df.to_csv(Path.joinpath(eval_valid_imbal_folder, \"{}_{}_valid_imbal_report.csv\".format(\n",
+    "        training_name,\n",
+    "        training_args_datetime.strftime(\"%Y-%m-%d\")\n",
+    "    )))"
    ]
   },
   {
