Save inference result arrays result to disk
Save inference result arrays result to disk

So that there is no need to re-inference if there is any new metric

--- a/NLP/dev-workspace/sa/bert_2023-12-13/evaluation_script.ipynb
+++ b/NLP/dev-workspace/sa/bert_2023-12-13/evaluation_script.ipynb
@@ -509,6 +509,19 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# save all three numpy arrays to disk\n",
+    "\n",
+    "np.save(Path.joinpath(eval_test_folder, 'y_test_pred.npy'), y_test_pred)\n",
+    "np.save(Path.joinpath(eval_test_folder, 'y_test_pred_prob.npy'), y_test_pred_prob)\n",
+    "np.save(Path.joinpath(eval_test_folder, 'y_test_true.npy'), y_test)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 19,
    "metadata": {},
    "outputs": [
@@ -716,6 +729,19 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# save all three numpy arrays to disk\n",
+    "\n",
+    "np.save(Path.joinpath(eval_valid_bal_folder, 'y_bal_valid_pred.npy'), y_bal_valid_pred)\n",
+    "np.save(Path.joinpath(eval_valid_bal_folder, 'y_bal_valid_pred_prob.npy'), y_bal_valid_pred_prob)\n",
+    "np.save(Path.joinpath(eval_valid_bal_folder, 'y_bal_valid.npy'), y_bal_valid)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "bal_valid_classification_result_dict = evaluation_functions.print_classification_report(y_bal_valid, y_bal_valid_pred)"
    ]
   },
@@ -899,6 +925,19 @@
     "\n",
     "y_imbal_valid_pred_prob = y_imbal_valid_pred_prob_raw if len(np.unique(y_imbal_valid_pred)) > 2 \\\n",
     "                else np.array([y_imbal_valid_pred_prob_raw[i, pred] for i, pred in enumerate(list(y_imbal_valid_pred))])\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# save all three numpy arrays to disk\n",
+    "\n",
+    "np.save(Path.joinpath(eval_valid_imbal_folder, 'y_imbal_valid_pred.npy'), y_imbal_valid_pred)\n",
+    "np.save(Path.joinpath(eval_valid_imbal_folder, 'y_imbal_valid_pred_prob.npy'), y_imbal_valid_pred_prob)\n",
+    "np.save(Path.joinpath(eval_valid_imbal_folder, 'y_imbal_valid.npy'), y_imbal_valid)"
    ]
   },
   {
