Add func to save inference numpy result arrays

--- a/NLP/dev-workspace/sa/glove-cnn_2023-12-12/evaluation_script.ipynb
+++ b/NLP/dev-workspace/sa/glove-cnn_2023-12-12/evaluation_script.ipynb
@@ -45,7 +45,19 @@
     "import evaluation_functions\n",
     "\n",
     "\n",
-    "SAVE_EVAL_RESULTS = True"
+    "SAVE_EVAL_RESULTS = True\n",
+    "SAVE_NUMPY_ARRAYS = True\n",
+    "LOAD_NUMPY_ARRAYS = False"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# import importlib\n",
+    "# importlib.reload(evaluation_functions)"
    ]
   },
   {
@@ -537,12 +549,31 @@
     }
    ],
    "source": [
-    "y_test_pred_prob_raw = model.predict(test_dataset)\n",
+    "if LOAD_NUMPY_ARRAYS:\n",
+    "    y_test_pred_prob_raw = np.load(Path.joinpath(eval_test_folder, 'y_test_pred_prob_raw.npy'))\n",
+    "    y_test_pred = np.load(Path.joinpath(eval_test_folder, 'y_test_pred.npy'))\n",
+    "    y_test_pred_prob = np.load(Path.joinpath(eval_test_folder, 'y_test_pred_prob.npy'))\n",
+    "    y_test = np.load(Path.joinpath(eval_test_folder, 'y_test.npy'))\n",
+    "else:\n",
+    "    y_test_pred_prob_raw = model.predict(test_dataset)\n",
     "\n",
-    "y_test_pred = np.argmax(y_test_pred_prob_raw, axis=1)\n",
+    "    y_test_pred = np.argmax(y_test_pred_prob_raw, axis=1)\n",
     "\n",
-    "y_test_pred_prob = y_test_pred_prob_raw if len(np.unique(y_test_pred)) > 2 \\\n",
-    "                else np.array([y_test_pred_prob_raw[i, pred] for i, pred in enumerate(list(y_test_pred))])"
+    "    y_test_pred_prob = y_test_pred_prob_raw if len(np.unique(y_test_pred)) > 2 \\\n",
+    "                    else np.array([y_test_pred_prob_raw[i, pred] for i, pred in enumerate(list(y_test_pred))])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "if SAVE_NUMPY_ARRAYS:\n",
+    "    np.save(Path.joinpath(eval_test_folder, 'y_test_pred_prob_raw.npy'), y_test_pred_prob_raw)\n",
+    "    np.save(Path.joinpath(eval_test_folder, 'y_pred.npy'), y_test_pred)\n",
+    "    np.save(Path.joinpath(eval_test_folder, 'y_pred_prob.npy'), y_test_pred_prob)\n",
+    "    np.save(Path.joinpath(eval_test_folder, 'y_test.npy'), y_test)"
    ]
   },
   {
@@ -642,7 +673,8 @@
     "    y_test_pred,\n",
     "    f'Confusion matrix {DATASET_SIZE}K-{\"bal\" if DATASET_IS_BALANCED else \"imbal\"}-training-data test-set',\n",
     "    save=SAVE_EVAL_RESULTS,\n",
-    "    save_filename=Path.joinpath(eval_test_folder, f'confusion_matrix_test.png')\n",
+    "    save_filename=Path.joinpath(eval_test_folder, f'confusion_matrix_test.png'),\n",
+    "    show=True\n",
     ")"
    ]
   },
@@ -675,7 +707,8 @@
     "    y_test_pred_prob,\n",
     "    f'ROC curve {DATASET_SIZE}K-{\"bal\" if DATASET_IS_BALANCED else \"imbal\"}-training-data test-set',\n",
     "    save=SAVE_EVAL_RESULTS,\n",
-    "    save_filename=Path.joinpath(eval_test_folder, f'roc_curve_test.png')\n",
+    "    save_filename=Path.joinpath(eval_test_folder, f'roc_curve_test.png'),\n",
+    "    show=True\n",
     ")"
    ]
   },
@@ -733,12 +766,31 @@
     }
    ],
    "source": [
-    "y_bal_valid_pred_prob_raw = model.predict(valid_bal_dataset)\n",
+    "if LOAD_NUMPY_ARRAYS:\n",
+    "    y_bal_valid_pred_prob_raw = np.load(Path.joinpath(eval_valid_imbal_folder, 'y_bal_valid_pred_prob_raw.npy'))\n",
+    "    y_bal_valid_pred = np.load(Path.joinpath(eval_valid_imbal_folder, 'y_bal_valid_pred.npy'))\n",
+    "    y_bal_valid_pred_prob = np.load(Path.joinpath(eval_valid_imbal_folder, 'y_bal_valid_pred_prob.npy'))\n",
+    "    y_bal_valid = np.load(Path.joinpath(eval_valid_imbal_folder, 'y_bal_valid.npy'))\n",
+    "else:\n",
+    "    y_bal_valid_pred_prob_raw = model.predict(valid_bal_dataset)\n",
     "\n",
-    "y_bal_valid_pred = np.argmax(y_bal_valid_pred_prob_raw, axis=1)\n",
+    "    y_bal_valid_pred = np.argmax(y_bal_valid_pred_prob_raw, axis=1)\n",
     "\n",
-    "y_bal_valid_pred_prob = y_bal_valid_pred_prob_raw if len(np.unique(y_bal_valid_pred)) > 2 \\\n",
-    "                else np.array([y_bal_valid_pred_prob_raw[i, pred] for i, pred in enumerate(list(y_bal_valid_pred))])"
+    "    y_bal_valid_pred_prob = y_bal_valid_pred_prob_raw if len(np.unique(y_bal_valid_pred)) > 2 \\\n",
+    "                    else np.array([y_bal_valid_pred_prob_raw[i, pred] for i, pred in enumerate(list(y_bal_valid_pred))])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "if SAVE_NUMPY_ARRAYS:\n",
+    "    np.save(Path.joinpath(eval_valid_bal_folder, 'y_bal_valid_pred_prob_raw.npy'), y_bal_valid_pred_prob_raw)\n",
+    "    np.save(Path.joinpath(eval_valid_bal_folder, 'y_bal_valid_pred.npy'), y_bal_valid_pred)\n",
+    "    np.save(Path.joinpath(eval_valid_bal_folder, 'y_bal_valid_pred_prob.npy'), y_bal_valid_pred_prob)\n",
+    "    np.save(Path.joinpath(eval_valid_bal_folder, 'y_bal_valid.npy'), y_bal_valid)"
    ]
   },
   {
@@ -834,7 +886,8 @@
     "    y_bal_valid, y_bal_valid_pred, \n",
     "    f'Confusion matrix {DATASET_SIZE}K-{\"bal\" if DATASET_IS_BALANCED else \"imbal\"}-training-data bal-valid-set',\n",
     "    save=SAVE_EVAL_RESULTS,\n",
-    "    save_filename=Path.joinpath(eval_valid_bal_folder, f'confusion_matrix_valid_bal.png')\n",
+    "    save_filename=Path.joinpath(eval_valid_bal_folder, f'confusion_matrix_valid_bal.png'),\n",
+    "    show=True\n",
     ")"
    ]
   },
@@ -866,7 +919,8 @@
     "    y_bal_valid, y_bal_valid_pred_prob, \n",
     "    title=f'ROC curve {DATASET_SIZE}K-{\"bal\" if DATASET_IS_BALANCED else \"imbal\"}-training-data bal-valid-set', \n",
     "    save=SAVE_EVAL_RESULTS,\n",
-    "    save_filename=Path.joinpath(eval_valid_bal_folder, f'roc_curve_valid_bal.png')\n",
+    "    save_filename=Path.joinpath(eval_valid_bal_folder, f'roc_curve_valid_bal.png'),\n",
+    "    show=True\n",
     ")"
    ]
   },
@@ -910,12 +964,32 @@
     }
    ],
    "source": [
-    "y_imbal_valid_pred_prob_raw = model.predict(valid_imbal_dataset)\n",
+    "if LOAD_NUMPY_ARRAYS:\n",
+    "    y_imbal_valid_pred_prob_raw = np.load(Path.joinpath(eval_valid_imbal_folder, 'y_imbal_valid_pred_prob_raw.npy'))\n",
+    "    y_imbal_valid_pred = np.load(Path.joinpath(eval_valid_imbal_folder, 'y_imbal_valid_pred.npy'))\n",
+    "    y_imbal_valid_pred_prob = np.load(Path.joinpath(eval_valid_imbal_folder, 'y_imbal_valid_pred_prob.npy'))\n",
+    "    y_imbal_valid = np.load(Path.joinpath(eval_valid_imbal_folder, 'y_imbal_valid.npy'))\n",
     "\n",
-    "y_imbal_valid_pred = np.argmax(y_imbal_valid_pred_prob_raw, axis=1)\n",
+    "else:\n",
+    "    y_imbal_valid_pred_prob_raw = model.predict(valid_imbal_dataset)\n",
     "\n",
-    "y_imbal_valid_pred_prob = y_imbal_valid_pred_prob_raw if len(np.unique(y_imbal_valid_pred)) > 2 \\\n",
-    "                else np.array([y_imbal_valid_pred_prob_raw[i, pred] for i, pred in enumerate(list(y_imbal_valid_pred))])"
+    "    y_imbal_valid_pred = np.argmax(y_imbal_valid_pred_prob_raw, axis=1)\n",
+    "\n",
+    "    y_imbal_valid_pred_prob = y_imbal_valid_pred_prob_raw if len(np.unique(y_imbal_valid_pred)) > 2 \\\n",
+    "                    else np.array([y_imbal_valid_pred_prob_raw[i, pred] for i, pred in enumerate(list(y_imbal_valid_pred))])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "if SAVE_NUMPY_ARRAYS:\n",
+    "    np.save(Path.joinpath(eval_valid_imbal_folder, 'y_imbal_valid_pred_prob_raw.npy'), y_imbal_valid_pred_prob_raw)\n",
+    "    np.save(Path.joinpath(eval_valid_imbal_folder, 'y_imbal_valid_pred.npy'), y_imbal_valid_pred)\n",
+    "    np.save(Path.joinpath(eval_valid_imbal_folder, 'y_imbal_valid_pred_prob.npy'), y_imbal_valid_pred_prob)\n",
+    "    np.save(Path.joinpath(eval_valid_imbal_folder, 'y_imbal_valid.npy'), y_imbal_valid)"
    ]
   },
   {
@@ -984,7 +1058,8 @@
     "    y_imbal_valid, y_imbal_valid_pred, \n",
     "    title=f'Confusion matrix {DATASET_SIZE}K-{\"bal\" if DATASET_IS_BALANCED else \"imbal\"}-training-data imbal-valid-set',\n",
     "    save=SAVE_EVAL_RESULTS,\n",
-    "    save_filename=Path.joinpath(eval_valid_imbal_folder, f'confusion_matrix_valid_imbal.png')\n",
+    "    save_filename=Path.joinpath(eval_valid_imbal_folder, f'confusion_matrix_valid_imbal.png'),\n",
+    "    show=True\n",
     ")"
    ]
   },
@@ -1016,7 +1091,8 @@
     "    y_imbal_valid, y_imbal_valid_pred_prob, \n",
     "    title=f'ROC curve {DATASET_SIZE}K-{\"bal\" if DATASET_IS_BALANCED else \"imbal\"}-training-data imbal-valid-set',\n",
     "    save=SAVE_EVAL_RESULTS,\n",
-    "    save_filename=Path.joinpath(eval_valid_imbal_folder, f'roc_curve_valid_imbal.png')\n",
+    "    save_filename=Path.joinpath(eval_valid_imbal_folder, f'roc_curve_valid_imbal.png'),\n",
+    "    show=True\n",
     ")"
    ]
   },
